Fix minor spacing issues an unbold header links

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h2 {
 .right {
     display: flex;
     gap: 32px;
-    font-weight: 550;
+    font-weight: 500;
     font-size: 18px;
 }
 
@@ -87,13 +87,14 @@ a {
     color: #1F2937;
     text-align: center;
     padding: 40px;
+    margin-top: 20px;
 }
 
-.white-container {
+.services-container {
     display: flex;
     gap: 32px;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 
 .service-text {
